--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "anna-juice-ltd",
-  "version": "1.0.0",
-  "description": "Beverage App for Anna Juice Ltd",
-  "main": "beverage.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "mocha": "^6.2.2"
-  }
+	"name": "anna-juice-ltd",
+	"version": "1.0.0",
+	"description": "Beverage App for Anna Juice Ltd",
+	"main": "beverage.js",
+	"scripts": {
+		"test": "nyc mocha",
+		"start": "node beverage.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"mocha": "^6.2.2"
+	}
 }
